# pitchekf

./: CMakeLists.txt  README.md  config.h.in  output.csv
data/: .~lock.accel.xls#  accel.csv  accel.xls  gyro.csv  gyroscope.csv  pitch_roll.csv
src/: Calculator.cpp  beacons.cpp  beacons.h  car.h  display.cpp  display.h  filterroad.cpp  kalmanfilter.cpp  kalmanfilter.h  main.cpp  read.cpp  readData.cpp  readData.h  roadslope.cpp  roadslope.h  sensors.cpp  sensors.h  simulation.cpp  simulation.h  utils.cpp  utils.h
